# backend-utils/bin/backend-swagger/docs/swagger.json
@@ -4,6 +4,30 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/auth/account/change_password": {
+            "post": {
+                "description": "Change the password of an account",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account::change_password"
+                ],
+                "summary": "Change Password",
+                "parameters": [
+                    {
+                        "description": "oldPasword newPassword",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/mod_user.ChangePassword"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/auth/account/logout": {
             "post": {
                 "description": "...",
@@ -154,6 +178,17 @@
                     "type": "integer",
                     "x-order": "23",
                     "example": 1715008592
+                }
+            }
+        },
+        "mod_user.ChangePassword": {
+            "type": "object",
+            "properties": {
+                "newPassword": {
+                    "type": "string"
+                },
+                "oldPassword": {
+                    "type": "string"
                 }
             }
         },
